<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_StationControls" Id="{38bafd1f-05c4-4579-b311-6e29f59359dd}">
    <Declaration><![CDATA[TYPE ST_StationControls :
STRUCT
	bEnable			: BOOL;
	bReset			: BOOL;
	bError			: BOOL;
	sStatus			: STRING(255);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>